# ElementsProject

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cli.py  main.py  pyproject.toml  requirements.txt  setup.cfg  simulation_viewer.py
analysis/: plots.py  snapshot.py
data/: reaction_kb_1764920119.jsonl  reaction_kb_1764920517.jsonl  reaction_kb_1764921519.jsonl  reaction_kb_1764921602.jsonl  reaction_kb_1764921796.jsonl  reaction_kb_1764921927.jsonl  reaction_kb_1764922050.jsonl  reaction_kb_1764942973.jsonl  reaction_kb_1764944873.jsonl  reaction_kb_1764946781.jsonl  reaction_kb_1764965565.jsonl  reaction_kb_1766008814.jsonl  reaction_kb_1766009031.jsonl  reaction_kb_1766010670.jsonl  reaction_kb_1766010677.jsonl  reaction_kb_1766010691.jsonl  reaction_kb_1766010770.jsonl  reaction_kb_1766010777.jsonl  reaction_kb_1766010780.jsonl  reaction_kb_1766010889.jsonl  reaction_kb_1766010893.jsonl  reaction_kb_1766010979.jsonl  reaction_kb_1766010983.jsonl  reaction_kb_1766010984.jsonl  reaction_kb_1766010989.jsonl  reaction_kb_1766011047.jsonl  reaction_kb_1766011070.jsonl  reaction_kb_1766011079.jsonl  reaction_kb_1766011094.jsonl  reaction_kb_1766011100.jsonl  reaction_kb_1766011108.jsonl  reaction_kb_1766011245.jsonl  reaction_kb_1766011307.jsonl  reaction_kb_1766011320.jsonl  reaction_kb_1766011328.jsonl  reaction_kb_1766011333.jsonl  reaction_kb_1766011370.jsonl  reaction_kb_1766011379.jsonl  reaction_kb_1766011395.jsonl  reaction_kb_1766011405.jsonl  (+47 more)
docs/: README_DEPLOY.md  README_demo.md  cli_demo.html  cli_demo2.html  cli_demo_events.html  cli_na_cl.html  demo_sim.html  example_sim.html  index.html  out.html  sim.html  sim_custom.html
elementsproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
engine/: __init__.py  atoms.py  bonds.py  constants.py  elements_data.py  exporter.py  formula_parser.py  integrators.py  metrics.py  physics.py  (+6 more)
(+57 files in other folders)
