[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elementsproject"
version = "0.1.0"
description = "2D molecular reaction simulator with ML-friendly exports"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "AMatelis" } ]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=6.0",
    "networkx>=3.1"
]

[project.scripts]
elements-sim = "main:run_simulation_cli"
