[metadata]
name = elementsproject
version = 0.1.0
description = Simple 2D molecular reaction simulation
author = Your Name
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your/repo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    plotly
    joblib
    networkx
    seaborn
include_package_data = True
; package_data is managed by MANIFEST.in and include_package_data

[options.entry_points]
console_scripts =
    elements-sim = cli:main
python_requires = >=3.8
